; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_win32.c_mi_error.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_win32.c_mi_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"Error\00", align 1
@g_Wnd = common dso_local global i32 0, align 4
@MB_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mi_error(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca [512 x i32], align 16
  %4 = alloca [512 x i32], align 16
  store i8* %0, i8** %2, align 8
  %5 = getelementptr inbounds [512 x i32], [512 x i32]* %3, i64 0, i64 0
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @str_to_uni(i32* %5, i8* %6)
  %8 = getelementptr inbounds [512 x i32], [512 x i32]* %4, i64 0, i64 0
  %9 = call i32 @str_to_uni(i32* %8, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* @g_Wnd, align 4
  %11 = getelementptr inbounds [512 x i32], [512 x i32]* %3, i64 0, i64 0
  %12 = getelementptr inbounds [512 x i32], [512 x i32]* %4, i64 0, i64 0
  %13 = load i32, i32* @MB_OK, align 4
  %14 = call i32 @MessageBox(i32 %10, i32* %11, i32* %12, i32 %13)
  ret void
}

declare dso_local i32 @str_to_uni(i32*, i8*) #1

declare dso_local i32 @MessageBox(i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
